--- a/templates/index.html
+++ b/templates/index.html
@@ -8,6 +8,7 @@
     <h1>Hello word </h1>
     <h2>5 * 6 = {{5*6}}</h2>
     <h3>Random Number: {{num}}</h3>
+<a href="{{ url_for('get_blog') }}">Go to blog</a>
 
 </body>
 <footer>
